Revert "standalone login box - ensure input text readable in dark mode"
This reverts commit 3500864d425f8492662b1c31e27a662bbd5be3b1 as not
needed after 6.0

--- a/ext/standaloneusers/css/standalone.css
+++ b/ext/standaloneusers/css/standalone.css
@@ -51,7 +51,6 @@ div.crm-container .standalone-auth-form input {
   height: 2rem;
   padding: 0.5rem;
   background-color: var(--crm-standalone-auth-box-bg);
-  color: var(--crm-standalone-auth-box-text);
 }
 .standalone-auth-form .login-or-forgot {
   display: grid;
